--- a/app/assets/stylesheets/shared/layout.css.sass
+++ b/app/assets/stylesheets/shared/layout.css.sass
@@ -10,16 +10,15 @@ hgroup
 
 .primary
   h1
+    +leader(0)
     strong
       color: $brand-green-lt
 
 .businessEngagement, .solutions, .developerPlatform, .about
   .primary
     color: white
-    .centered-container
-      min-height: 375px
-      a
-        color: white
+    a
+      color: white
 // Secondary Header
 // --------------------------------------------------------------------
 .secondary
@@ -89,6 +88,11 @@ section.articles
 // --------------------------------------------------------------------
 +at-breakpoint($tablet)
 
+  .businessEngagement, .solutions, .developerPlatform, .about
+    .primary
+      .centered-container
+        min-height: 375px
+
   .primary, .secondary
     h1
       +leader(1.5)
@@ -111,9 +115,11 @@ section.articles
       +span-columns(4 omega)
       text-align: right
 
+
 // Desktop Breakpoint (12 columns default)
 // --------------------------------------------------------------------
 +at-breakpoint($desktop)
+
   .primary, .secondary
     header
       // +span-columns(11)
